fixed jdk version and added manifest